[package]
name = "assemble-rs"
version = "0.1.0"
authors = ["Joshua Radin <jradin16@gmail.com"]
edition = "2021"

[workspace]
members = [
	"crates/*"
]

[dependencies]
clap = { version = "3.1.18", features = ["derive"] }
assemble-daemon = { path = "crates/assemble-daemon" }
assemble-core = {path = "crates/assemble-core"}