[package]
name = "assemble-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
petgraph = "0.6.0"
static_assertions = "1.1.0"
thiserror = "1.0.30"
assemble-macros = { path = "../assemble-macros"}
reqwest = { version = "0.11.10", features = ["blocking", "json"] }
serde = { version = "1.0.137", features = ["derive"] }
once_cell = "1.12.0"
url = "2.2.2"
include_dir = "0.7.2"