[package]
name = "assemble-bin_maker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["rust"]
rust = []

[dependencies]
clap = { version = "3.1.18", features = ["derive"] }
assemble-core = { path = '../assemble-core' }
assemble-std = { path = '../assemble-std' }
serde = { version = "1.0.137", features = ["derive"] }
serde_yaml = "0.8.24"
toml = "0.5.9"
url = { version = "2.2.2", features = ["serde"] }
tokio = "1.18.2"
tempfile = "3.3.0"
once_cell = "1.12.0"
include_dir = "0.7.2"
threadpool = "1.8.1"
reqwest = "0.11.10"
tar = "0.4.38"
flate2 = "1.0.24"
simple_logger = "2.1.0"
log = "0.4.17"
