[package]
name = "assemble-build"
description = "Provides build script data for assemble. Not really used right now."
version.workspace = true
edition.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
rust-version.workspace = true

keywords.workspace = true
categories = ["development-tools", "development-tools::build-utils"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = { version = "1.0.97", features = ["parsing", "full", "visit", "extra-traits"] }
