[package]
name = "assemble-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
internal = []
derive = ["internal", "assemble-macros"]

[dependencies]
petgraph = "0.6.0"
static_assertions = "1.1.0"
thiserror = "1.0.30"
reqwest = { version = "0.11.10", features = ["blocking", "json"] }
serde = { version = "1.0.137", features = ["derive"] }
once_cell = "1.12.0"
url = "2.2.2"
include_dir = "0.7.2"
tempfile = "3.3.0"
clap = { version = "3.1.18", features = ["derive"] }
log = "0.4.17"
assemble-macros = { path = "../assemble-macros", optional =true }
fern = "0.6.1"
colored = "2.0.0"
time = { version = "0.3.9",  features = ["macros", "formatting", "local-offset"] }
dirs = "4.0.0"
walkdir = "2.3.2"
itertools = "0.10.3"
glob = "0.3.0"
indicatif = "0.16.2"
crossbeam = "0.8.1"
rayon = "1.5.3"
rand = "0.8.5"
uuid = { version = "1.1.2", features = ["v4"] }
