[package]
name = "assemble-core"
description = "The core crate of the assemble-rs package"
version.workspace = true
edition.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
rust-version.workspace = true

keywords.workspace = true
categories = ["development-tools"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["ron"]
ron = ["ron-serde"]
compact = ["rmp-serde"]
derive = ["assemble-macros"]

# Defines the unstable features
unstable = []
text_factory = ["unstable"]
log_origin_control = ["unstable"]

[dependencies]
petgraph = "0.6.0"
static_assertions = "1.1.0"
thiserror = "1.0.30"
reqwest = { version = "0.11.10", features = ["blocking", "json"] }
serde = { version = "1.0.137", features = ["derive"] }
once_cell = "1.12.0"
url = { version = "2.2.2", features = ["serde"] }
include_dir = "0.7.2"
tempfile = "3.3.0"
clap = { version = "4.0.4", features = ["derive"] }
log = "0.4.17"
assemble-macros = { path = "../assemble-macros", optional = true, version = "0.2.0" }
fern = "0.6.1"
colored = "2.0.0"
time = { version = "0.3.9",  features = ["macros", "formatting", "local-offset"] }
dirs = "4.0.0"
walkdir = "2.3.2"
itertools = "0.10.3"
glob = "0.3.0"
indicatif = "0.17.0"
crossbeam = "0.8.1"
rayon = "1.5.3"
rand = "0.8.5"
uuid = { version = "1.1.2", features = ["v4"] }
regex = "1.5.6"
backtrace = "0.3.65"
anymap = "0.12.1"


heck = "0.4.0"
thread_local = "1.1.4"
serde_json = "1.0.82"
atty = "0.2.14"
sha2 = "0.10.2"
generic-array = "0.14.6"
toml = "0.5.9"
toml_edit = { version = "0.14.4", features = ["serde"] }
semver = { version = "1.0.13", features = ["serde"] }
strum = "0.24.1"
strum_macros = "0.24.1"
merge = { version = "0.1.0", features = ["derive"] }

# task output serializer
ron-serde = { package = "ron", version = "0.8.0", optional = true }
rmp-serde = { version = "1.1.1", optional = true }

[dev-dependencies]
assemble-macros = { path = "../assemble-macros" }
more_collection_macros = "0.2.2"
semver = { version = "1.0.13", features = ["serde"] }

