[package]
name = "assemble-daemon"
version = "0.1.0"
edition = "2021"


homepage = "https://joshradin.github.io/assemble-rs/"
repository = "https://github.com/joshradin/assemble-rs"
license = "MIT or Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "daemon"

[[bin]]
name = "server"

[dependencies]
clap = { version = "3.1.12", features = ["derive"] }
thiserror = "1.0.31"
once_cell = "1.12.0"
lockfile = "0.3.0"
serde_json = "1.0.81"
serde = { version = "1.0.137", features = ["derive"] }

[dependencies.assemble-core]
path = "../assemble-core"
features = ["internal"]
version = "*"
