[package]
name = "assemble-freight"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
assemble-core = { path = "../assemble-core"}
backtrace = "0.3.65"
clap = { version = "3.2.5", features = ["derive"] }
num_cpus = "1.13.1"
petgraph = "0.6.2"
thiserror = "1.0.31"
