[package]
name = "assemble-freight"
description = "The main executor for the assemble-rs project."
version = "0.1.1"
edition = "2021"

homepage = "https://joshradin.github.io/assemble-rs/"
repository = "https://github.com/joshradin/assemble-rs"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
assemble-core = { path = "../assemble-core", version = "0.1.1" }
backtrace = "0.3.65"
clap = { version = "3.2.5", features = ["derive"] }
num_cpus = "1.13.1"
petgraph = "0.6.2"
thiserror = "1.0.31"
log = "0.4.17"
array2d = "0.2.1"
colored = "2.0.0"
itertools = "0.10.3"
indexmap = "1.9.1"
indicatif = "0.17.0"
rayon = "1.5.3"

[dev-dependencies]
rand = "0.8.5"
