[package]
name = "assemble-freight"
description = "The main executor for the assemble-rs project."
version.workspace = true
edition.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
rust-version.workspace = true

keywords.workspace = true
categories = ["development-tools"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
assemble-core = { path = "../assemble-core", version = "0.2.0" }
backtrace = "0.3.65"
clap = { version = "4.0.8", features = ["derive", "color", "cargo", "help"] }
num_cpus = "1.13.1"
petgraph = "0.6.2"
thiserror = "1.0.31"
log = "0.4.17"
array2d = "0.2.1"
colored = "2.0.0"
itertools = "0.10.3"
indexmap = "1.9.1"
indicatif = "0.17.0"
rayon = "1.5.3"
ptree = { version = "0.4.0", features = ["petgraph"] }
merge = { version = "0.1.0", features = ["derive"] }
parking_lot = "0.12.1"

[dev-dependencies]
rand = "0.8.5"

