[package]
name = "assemble-js-plugin"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/rust/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
include_dir = "0.7.2"
thiserror = "1.0.37"
rquickjs = { version = "0.1.7", features = ["macro"] }
log = "0.4.17"
assemble-std = { version = "0.2.0", path = "../assemble-std", features = ["core"] }
regex = "1.7.0"

[build-dependencies]
npm_rs = "1.0.0"
