[package]
name = "assemble-js-plugin"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/rust/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
include_dir = "0.7.2"
thiserror = "1.0.37"
rquickjs = { version = "0.1.7", features = ["macro", "parallel"] }
log = "0.4.17"
assemble-std = { version = "0.2.0", path = "../assemble-std", features = ["core"] }
assemble-core = { version = "0.2.0", path = "../assemble-core", features = ["derive"] }
regex = "1.7.0"
parking_lot = "0.12.1"
once_cell = "1.16.0"

[build-dependencies]
npm_rs = "1.0.0"

[dev-dependencies]
simple_logger = "4.0.0"
