[package]
name = "assemble-macros"
description = "Macros for assemble. shouldn't be used by itself. Instead use assemble-core"
version = "0.1.3"
edition = "2021"
authors = ["Joshua Radin <jradin16@gmail.com"]
homepage = "https://joshradin.github.io/assemble-rs/"
repository = "https://github.com/joshradin/assemble-rs"
license = "MIT OR Apache-2.0"

[lib]
proc-macro=true

[dependencies]
syn = { version = "1.0.94", features = ["full", "visit", "extra-traits"] }
quote = "1.0.18"
proc-macro2 = "1.0.39"
proc-macro-error = "1.0.4"
