[package]
name = "assemble-macros"
description = "Macros for assemble. shouldn't be used by itself. Instead use assemble-core"



version.workspace = true
edition.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
rust-version.workspace = true

keywords.workspace = true
categories = ["development-tools"]

[lib]
proc-macro = true


[dependencies]
syn = { version = "1.0.94", features = ["full", "visit", "extra-traits"] }
quote = "1.0.18"
proc-macro2 = "1.0.39"
proc-macro-error = "1.0.4"
strum = { version = "0.24.1", features = ["derive"] }


[dev-dependencies]
assemble-core = { path = "../assemble-core"}
ron = "0.8.0"
