[package]
name = "assemble-rust"
version = "0.1.0"
edition = "2021"

homepage = "https://joshradin.github.io/assemble-rs/"
repository = "https://github.com/joshradin/assemble-rs"
license = "MIT OR Apache-2.0"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
assemble-std = { path = "../assemble-std", features=["core"], version = "*"}
assemble-core = { path = "../assemble-core", features = ["derive"], version = "*"}
url = "2.2.2"
reqwest = "0.11.11"
