[package]
name = "assemble-rust"
description = "An assemble-rs plugin for building rust projects"
version = "0.1.3"
edition = "2021"
authors = ["Joshua Radin <jradin16@gmail.com"]
homepage = "https://joshradin.github.io/assemble-rs/"
repository = "https://github.com/joshradin/assemble-rs"
license = "MIT OR Apache-2.0"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
assemble-std = { path = "../assemble-std", features=["core"], version = "0.1.3" }
assemble-core = { path = "../assemble-core", features = ["derive"], version = "0.1.3" }
url = "2.2.2"
reqwest = "0.11.11"
log = "0.4.17"
which = "4.2.5"
chrono = "0.4.22"
serde = { version = "1.0.143", features = ["derive"] }

[dev-dependencies]
assemble-freight = { path = "../assemble-freight" }
clap = "3.2.17"
