[package]
name = "assemble-std"
description = "The standard library for assemble"
version = "0.1.2"
edition = "2021"
authors = ["Joshua Radin <jradin16@gmail.com"]
homepage = "https://joshradin.github.io/assemble-rs/"
repository = "https://github.com/joshradin/assemble-rs"
license = "MIT OR Apache-2.0"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
core = ["assemble-core/derive"]

[dependencies]
assemble-core = { path = "../assemble-core", features = ["derive"], version = "0.1.1"}
thiserror = "1.0.31"
reqwest = "0.11.11"
url = { version = "2.2.2", features = ["serde"] }
serde = { version = "1.0.143", features = ["derive"] }
once_cell = "1.13.1"
tempfile = "3.3.0"
dirs = "4.0.0"
log = "0.4.17"
colored = "2.0.0"

[build-dependencies]
assemble-build = { path = "../assemble-build", version = "0.1.1"}
