[package]
name = "assemble-std"
description = "The standard library for assemble"
version.workspace = true
edition.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
rust-version.workspace = true

keywords.workspace = true
categories = ["development-tools"]

[features]
default = ["core"]
core = ["assemble-core/derive"]

[dependencies]
assemble-core = { path = "../assemble-core", features = ["derive", "unstable", "log_origin_control"], version = "0.2.0" }
thiserror = "1.0.31"
reqwest = "0.11.11"
url = { version = "2.2.2", features = ["serde"] }
serde = { version = "1.0.143", features = ["derive"] }
once_cell = "1.13.1"
tempfile = "3.3.0"
dirs = "4.0.0"
log = "0.4.17"
colored = "2.0.0"

[build-dependencies]
assemble-build = { path = "../assemble-build", version = "0.2.0" }

