[package]
name = "assemble-exec"
version = "0.2.0"
authors = ["Joshua Radin <jradin16@gmail.com"]
edition = "2021"
description = "The assemble executor, the main entry point towards building assemble projects"
homepage = "https://joshradin.github.io/assemble-rs/"
repository = "https://github.com/joshradin/assemble-rs"
license = "MIT OR Apache-2.0"

[lib]
name = "assemble"

[[bin]]
name = "assemble"
path = "src/main.rs"

[features]
default = ["yaml"]
yaml = ["serde_yaml"]

[dependencies]
assemble-core = { version = "0.2.0", path = "../assemble-core", features = ["derive", "text_factory"] }
assemble-freight = { version = "0.2.0", path = "../assemble-freight" }
serde = { version = "1.0.143", features = ["derive"] }
serde_yaml = { version = "0.9.9", optional = true }
thiserror = "1.0.32"
log = "0.4.17"
heck = "0.4.0"
itertools = "0.10.3"
toml_edit = { version = "0.14.4", features = ["serde"] }
toml = { version = "0.5.9", features = ["preserve_order"] }
assemble-rust = { version = "0.2.0", path = "../assemble-rust" }
assemble-std = { version = "0.2.0", path = "../assemble-std" }
tempfile = "3.3.0"
anyhow = "1.0.65"



