[package]
name = "assemble-exec"
description = "The executable for assemble"
version.workspace = true
edition.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
rust-version.workspace = true

keywords.workspace = true
categories = ["command-line-utilities", "development-tools"]


[lib]
name = "assemble"

[[bin]]
name = "assemble"
path = "src/main.rs"

[features]
default = []
yaml = ["serde_yaml"]
js = ["rquickjs", "assemble-js-plugin"]
dump_js = ["rquickjs/dump-atoms", "rquickjs/dump-bytecode", "rquickjs/dump-objects"]

[dependencies]
assemble-core = { version = "0.2.0", path = "../assemble-core", features = ["derive", "text_factory"] }
assemble-freight = { version = "0.2.0", path = "../assemble-freight" }
serde = { version = "1.0.143", features = ["derive"] }
thiserror = "1.0.32"
log = "0.4.17"
heck = "0.4.0"
itertools = "0.10.3"
toml_edit = { version = "0.14.4", features = ["serde"] }
toml = { version = "0.5.9", features = ["preserve_order"] }
assemble-rust = { version = "0.2.0", path = "../assemble-rust" }
assemble-std = { version = "0.2.0", path = "../assemble-std" }
tempfile = "3.3.0"
anyhow = "1.0.65"
libloading = "0.7.3"
parking_lot = "0.12.1"
static_assertions = "1.1.0"

# optional dependencies
rquickjs = { version = "0.1.7", optional=true, features=["macro", "rust-alloc", "exports", "loader"] }
serde_yaml = { version = "0.9.9", optional = true }
assemble-js-plugin = { version = "0.1.0", path = "../assemble-js-plugin", optional = true }
