[package]
name = "assemble-exec"
description = "The executable for assemble"
version.workspace = true
edition.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
rust-version.workspace = true

keywords.workspace = true
categories = ["command-line-utilities", "development-tools"]


[lib]
name = "assemble"

[[bin]]
name = "asmbl"
path = "src/main.rs"

[features]
default = ["js"]
yaml = ["serde_yaml", "libloading", "assemble-rust"]
js = ["rquickjs", "assemble-js"]
dump_js = ["rquickjs/dump-atoms", "rquickjs/dump-bytecode", "rquickjs/dump-objects"]

[dependencies]
assemble-core = { version = "0.2.0", path = "../assemble-core", features = ["derive", "text_factory"] }
assemble-freight = { version = "0.2.0", path = "../assemble-freight" }
serde = { version = "1.0.143", features = ["derive"] }
thiserror = "1.0.32"
log = "0.4.17"
heck = "0.4.0"
itertools = "0.10.3"
toml = { version = "0.5.9", features = ["preserve_order"] }

assemble-std = { version = "0.2.0", path = "../assemble-std" }
tempfile = "3.3.0"
anyhow = "1.0.65"
parking_lot = "0.12.1"
static_assertions = "1.1.0"
cfg-if = "1.0.0"

# optional dependencies
assemble-rust = { version = "0.2.0", path = "../assemble-rust", optional=true }
libloading = { version = "0.7.3", optional = true }
serde_yaml = { version = "0.9.9", optional = true }

rquickjs = { version = "0.1.7", optional=true, features=["macro", "rust-alloc", "exports", "loader"] }
assemble-js = { version = "0.2.0", path = "../assemble-js", optional = true }

[dev-dependencies]
env_logger = "0.10.0"
